K8S-Yml-Files/Projcts-1-Python-with-Nginx/py-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: py-app
  name: py-app
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: py-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: py-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: color
                    operator: In
                    values:
                      - green
      containers:
        - name: my-python-new-s8hcz
          image: amirn88/my-python_new
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
