K8S-Yml-Files/Projcts-1-Python-with-Nginx/ingress-py-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: py-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: py-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: py-app
            port:
              number: 80
